# deptracpy

./: .coveragerc  .dockerignore  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENCE.md  LICENSE.txt  README.md  README.rst  deptracpy.yaml  docker-compose.yaml  makefile  mypy-baseline.txt  mypy.ini  pyproject.toml  requirements-lint.txt  requirements-type-check.txt  setup.cfg  setup.py
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  bc_policy.md  collectors.md  concepts.md  conf.py  configuration.md  formatters.md  index.md  index.rst
src/deptracpy/: __init__.py  skeleton.py
src/deptracpy/Contract/: analysis_result.py  argument_parser.py  config.py
src/deptracpy/Core/Analyser/: default_analyser.py  input_loader.py
src/deptracpy/Core/Ast/: ast_map.py
src/deptracpy/Core/Layer/: layer_resolver.py
src/deptracpy/Core/References/: resolver.py
src/deptracpy/OutputFormatter/: console_formatter.py  dot_formatter.py  format.py
src/deptracpy/Supportive/: config_loader.py  entrypoint.py
tests/: conftest.py  test_skeleton.py
