[metadata]
name = deptracpy
description = Add a short description here!
author = patrickkusebauch
author_email = patrick.kusebauch@gmail.com
long_description = file: README.md
url = https://github.com/patrickkusebauch/deptracpy/
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
python_requires = >=3.10

install_requires =
    libcst==0.4.9
    pyYAML==5.4.1
    returns==0.19.0
    typed-argument-parser==1.8.0
    rich==13.3.1

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    deptracpy = deptracpy.Supportive.entrypoint:run

[options.package_data]
deptracpy =
    py.typed

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501, W503
exclude =
    build
    dist
    .eggs
    docs/conf.py
